# seascape-glsl

./: .gitignore  CMakeLists.txt  README.md  clouds.glsl  logo.cpp  logo.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  seascape.glsl  shader.cpp  shader.hpp  vector_shader.glsl  widget.cpp  widget.hpp  window.cpp  window.hpp
shaders/: const_color.glsl  light.glsl  primitives.glsl  seascape.glsl  shaders.qrc  transpose.glsl  vector_v2.glsl
web/: .clang-format  .gitattributes  .gitignore  .npmrc  README.md  fragment.glsl  index.html  index.js  package.json  theme.blend  vertex.glsl
web/css/: style.css
web/js/: index.js  main.js
web/resources/: theme.gltf
web/shaders/: figures.glsl  fragment.glsl  global.glsl  material.glsl  vertex.glsl
web/tests/: IntToVec.py
